# nomad-dtu-nanolab-plugin

./: .cruft.json  .gitignore  404.html  CITATION.cff  LICENSE  MANIFEST.in  README.md  functions.py  index.html  javascript.js  logfile_output.archive.json  mkdocs.yml  nomad.yaml  output.archive.json  pyproject.toml  pyproject.toml.rej  requirements_docs.txt  target_output.archive.json  target_output2.archive.json  test_parse.archive.json  test_raman_parsing.py
.devcontainer/: devcontainer.json
.github/workflows/: actions.yml  cruft-update.yml  mkdocs-deploy.yml
assets/: ternary-plot-example.html
assets/images/: index.html
docs/: index.md
docs/explanation/: characterization.md  combinatorial-libraries.md  data-model.md  explanation.md  index.md  workflow.md
docs/how_to/: adapt-for-your-lab.md  add-autosampler-measurements.md  add-edx-measurements.md  add-ellipsometry-measurements.md  add-raman-measurements.md  add-rtp-data.md  add-xrd-measurements.md  cleave-libraries.md  contribute_to_the_documentation.md  contribute_to_this_plugin.md  export-high-quality-figures.md  getting-started-with-schemas.md  install_this_plugin.md  plot-combinatorial-edx.md  troubleshoot-jupyter.md  upload-sputtering-data.md  use_this_plugin.md
docs/reference/: analysis.md  basesections.md  cleaving.md  edx.md  ellipsometry.md  gas.md  index.md  instruments.md  pl.md  raman.md  references.md  rt.md  rtp.md  samples.md  sputtering.md  substrates.md  targets.md  thermal.md  xps.md  xrd.md
docs/stylesheets/: extra.css
docs/tutorial/: tutorial.md
explanation/: characterization.html  combinatorial-libraries.html  data-model.html  explanation.html  index.html  workflow.html
how_to/: adapt-for-your-lab.html  add-autosampler-measurements.html  add-edx-measurements.html  add-ellipsometry-measurements.html  add-raman-measurements.html  add-rtp-data.html  add-xrd-measurements.html  cleave-libraries.html  contribute_to_the_documentation.html  contribute_to_this_plugin.html  export-high-quality-figures.html  getting-started-with-schemas.html  install_this_plugin.html  plot-combinatorial-edx.html  troubleshoot-jupyter.html  upload-sputtering-data.html  use_this_plugin.html
reference/: analysis.html  basesections.html  cleaving.html  edx.html  ellipsometry.html  gas.html  index.html  instruments.html  pl.html  raman.html  references.html  rt.html  rtp.html  samples.html  sputtering.html  substrates.html  targets.html  thermal.html  xps.html  xrd.html
search/: search_index.json
src/nomad_dtu_nanolab_plugin/: General_sputter_log_reader  General_sputter_log_reader.py  PC1_sputter_log_reader  PC1_sputter_log_reader.py  analysis_functions.py  autosampler_reader.py  basesections.py  categories.py  elements.json  output.csv  raman_map_parser.py  rtp_log_reader.py  sputter_chamber_visualizer.py  sputter_log_reader.py  sputter_log_reader_class.py
tests/: conftest.py
tests/apps/: test_app.py  test_app.py.rej
tests/data/: NOMAD_ready_Ag_T_001.txt  NOMAD_ready_Lesker.txt  anait_0029_Ba-Zr_BL.xlsx  anait_0030_RTP_ha_rt_measurement_20251105_203950.archive.json  anait_0030_RTP_hb_rt_measurement_20251105_230614.archive.json  anait_0030_RTP_hc_rt_measurement_20251105_212832.archive.json  anait_0030_RTP_hd_rt_measurement_20251105_221715.archive.json  anait_0034_Ba-Zr_RecordingSet 2025.07.07-15.31.01.CSV  anat_eugbe_251105_grid.csv  eugbe_0008_RTP_hd_X2_Y0_slow.csv  eugbe_0008_RTP_hd_rt_measurement_20251105_190408.archive.json  eugbe_0009_RTP_hc_SiO2_map.SE  eugbe_0009_RTP_hc_SiO2_map.SEsnap  (+45 more)
tutorial/: tutorial.html
(+52 files in other folders)
